--- a/shared/scss/base/common/vars.scss
+++ b/shared/scss/base/common/vars.scss
@@ -64,9 +64,9 @@ $btn-main-color: $brand-white;
 $btn-main-active-bg: $brand-secondary-light;
 $btn-main-active-color: $brand-white;
 
-$category-box-bg: $brand-white;
-$category-box-text-color: $brand-primary;
-$category-box-count-color: $brand-primary;
+$category-box-bg: $brand-primary;
+$category-box-text-color: $brand-white;
+$category-box-count-color: $brand-white;
 $stats-text-color: $brand-white;
 
 $accordion-bg: $brand-primary;
