--- a/shared/scss/components/cms/categories.scss
+++ b/shared/scss/components/cms/categories.scss
@@ -6,7 +6,7 @@
 }
 
 .category__wrapper {
-  width: $base*29.25;
+  width: $base*18;
   padding-left: $base;
   padding-right: $base;
   padding-bottom: $base*1.5;
@@ -14,34 +14,39 @@
 
 .category--box {
   @extend %box;
-  border-radius: $base/5;
-  background: $category-box-bg;
+  background-color: transparent;
+  color: $category-box-count-color;
   margin-left: 0;
   padding: $base*2 $base*1.5;
   height: 100%;
+  transition: all .2s ease-in-out;
+
+  &:hover {
+    background-color: darken($category-box-bg, 20%);
+  }
 }
 
 .category__link {
-  display: flex;
   height: 100%;
-  align-items: center;
+  display: block;
+  margin: auto;
+  text-align: center;
 }
 
 .category__icon {
   margin-right: $base;
   height: $base*2.5;
   width: $base*2.5;
-  float: left;
+  color: $category-box-count-color;
 }
 
 .category__name {
-  display: inline-block;
+  display: block;
   padding-right: $base*0.5;
   color: $category-box-text-color;
 }
 
 .category__count {
-  display: inline-block;
   font-weight: normal;
   padding: 0 7px;
   border: 1px solid $category-box-count-color;
